--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,2 +1,10 @@
 FROM oracle/graalvm-ce:20.0.0
 
+WORKDIR /usr/local/src
+
+RUN yum update -y && \
+    yum install -y vim \
+    wget \
+    unzip
+
+
